ref: remove multi-city support

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,12 +31,7 @@
       <img src="" alt="Kein Bild" />
     </div>
   </div>
-  <div id="overlay">
-    <span id="city-counter" hidden></span>
-    <select id="city-select" hidden onchange="this.value ? showCity(this.value): showCityOverview()">
-      <option value="">-----</option>
-    </select>
-  </div>
+  <div id="overlay"><span id="city-counter" hidden></span></div>
   <div id="map"></div>
   <script defer>start()</script>
 </body>
